# TemplateTest

./: CMakeLists.txt
TemplateTest/: .clang-format  CMakeLists.txt
TemplateTest/01_Basics/: CMakeLists.txt
TemplateTest/01_Basics/01_FunctionTemplate/: CMakeLists.txt  main.cpp
TemplateTest/01_Basics/02_ClassTemplate/: CMakeLists.txt  Stack.h  main.cpp
